[Fix] Fix issues discovered by testing against frontend.